<resources>
    <string name="app_name">Skistar</string>
    <string name="menu_button_all_runs">Browse all runs</string>

    <string name="listview_header_date">Date</string>
    <string name="listview_header_lift">Lift</string>
    <string name="listview_header_location">Location</string>
    <string name="listview_header_height">Height</string>

    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_refresh">Refresh</string>

    <string name="statistics_header">STATISTICS</string>
    <string name="statistics_header_today_runs">Runs made today:</string>
    <string name="statistics_header_today_height">Height dropped (meters):</string>
    <string name="statistics_header_week_runs">Runs made this week:</string>
    <string name="statistics_header_week_height">Height dropped (meters):</string>
    <string name="statistics_header_season_runs">Runs made this season:</string>
    <string name="statistics_header_season_height">Height dropped (meters):</string>
</resources>
