<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ViewModel"
            type="newton.android.skistar.ViewModels.ViewModel" />
    </data>

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="newton.android.skistar.StatisticsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/statistics_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tabHost"
        android:text="@string/statistics_header"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="10dp" />

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/statistics_title"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/allRunsButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/statistics_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/statistics_header_today_runs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:background="@color/colorPrimary"
                            android:textColor="#ffffff"
                            android:textSize="25sp"
                            android:text="@string/statistics_header_today_runs" />

                        <TextView
                            android:id="@+id/statistics_today_runs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimary"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:text="0" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/statistics_header_today_height"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/colorPrimary"
                            android:layout_weight="1"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:text="@string/statistics_header_today_height" />

                        <TextView
                            android:id="@+id/statistics_today_height"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="25sp"
                            android:text="0m" />

                    </TableRow>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/statistics_week"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/statistics_header_week_runs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:background="@color/colorPrimary"
                            android:textColor="#ffffff"
                            android:textSize="25sp"
                            android:text="@string/statistics_header_week_runs" />

                        <TextView
                            android:id="@+id/statistics_week_runs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="25sp"
                            android:text="0" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/statistics_header_week_height"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:background="@color/colorPrimary"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:text="@string/statistics_header_week_height" />

                        <TextView
                            android:id="@+id/statistics_week_height"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:text="0m" />

                    </TableRow>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/statistics_season"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/statistics_header_season_runs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:background="@color/colorPrimary"
                            android:textColor="#ffffff"
                            android:textSize="25sp"
                            android:text="@string/statistics_header_season_runs" />

                        <TextView
                            android:id="@+id/statistics_season_runs"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:text="0" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/statistics_header_season_height"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:background="@color/colorPrimary"
                            android:textColor="#ffffff"
                            android:textSize="25sp"
                            android:text="@string/statistics_header_season_height" />

                        <TextView
                            android:id="@+id/statistics_season_height"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:text="0m" />

                    </TableRow>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <Button
        android:id="@+id/allRunsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="allRunsButtonClick"
        android:padding="20dp"
        android:text="@string/menu_button_all_runs"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
</layout>